--- a/index-fullneu.html
+++ b/index-fullneu.html
@@ -14,40 +14,81 @@
     .middle { grid-column:2; padding:16px; }
 
     /* HERO: Foto + halbtransparentes grünes Panel */
-.hero{
-  position:relative;
-  display:flex; align-items:center; justify-content:center;
-  min-height: 360px; padding: 36px 16px 26px;
-  border-radius:0 0 16px 16px; overflow:hidden;
-  background: url('assets/Bundestag.jpg') center 35% / cover no-repeat;
-}
-/* dunkle Vignette, damit das Foto ruhiger ist */
-.hero::before{
-  content:""; position:absolute; inset:0;
-  background: radial-gradient(140% 100% at 50% 20%, rgba(0,0,0,.15), rgba(0,0,0,.45));
-}
-/* das grüne Panel */
-.hero-panel{
-  position:relative; z-index:1;
-  background: rgba(10,125,50,.82);           /* <-- Transparenz hier anpassen */
-  color:#fff; border-radius:22px;
-  padding: 20px 24px; max-width:min(92vw,720px); width:fit-content;
-  box-shadow: 0 18px 48px rgba(0,0,0,.35);
-  text-align:center;
-}
-.hero .logo img{
-  width: clamp(220px, 48vw, 520px); height:auto; display:block;
-  filter: drop-shadow(0 3px 8px rgba(0,0,0,.25));
-  margin-inline:auto;
-}
-.tagline{ margin:8px 0 0; font-size:1.05rem; opacity:.95; }
-.cta{ display:inline-block; margin-top:12px; padding:10px 16px; background:#fff; color:#0a7d32; text-decoration:none; border-radius:10px; font-weight:700; }
+    .hero{
+      position:relative;
+      display:flex; align-items:center; justify-content:center;
+      min-height: 360px; padding: 36px 16px 26px;
+      border-radius:0 0 16px 16px; overflow:hidden;
+      background: url('assets/Bundestag.jpg') center 35% / cover no-repeat;
+    }
+    .hero::before{
+      content:""; position:absolute; inset:0;
+      background: radial-gradient(140% 100% at 50% 20%, rgba(0,0,0,.15), rgba(0,0,0,.45));
+    }
+    .hero-panel{
+      position:relative; z-index:1;
+      background: rgba(10,125,50,.82);
+      color:#fff; border-radius:22px;
+      padding: 20px 24px; max-width:min(92vw,720px); width:fit-content;
+      box-shadow: 0 18px 48px rgba(0,0,0,.35);
+      text-align:center;
+    }
+    .hero .logo img{
+      width: clamp(220px, 48vw, 520px); height:auto; display:block;
+      filter: drop-shadow(0 3px 8px rgba(0,0,0,.25));
+      margin-inline:auto;
+    }
+    .tagline{ margin:8px 0 0; font-size:1.05rem; opacity:.95; }
+    .cta{ display:inline-block; margin-top:12px; padding:10px 16px; background:#fff; color:#0a7d32; text-decoration:none; border-radius:10px; font-weight:700; }
 
-@media (max-width:720px){
-  .hero{ min-height: 300px; padding: 26px 12px 18px; background-position:center 40%; }
-  .hero-panel{ border-radius:16px; padding:16px; }
-  .tagline{ font-size:.98rem; }
-}
+    @media (max-width:720px){
+      .hero{ min-height: 300px; padding: 26px 12px 18px; background-position:center 40%; }
+      .hero-panel{ border-radius:16px; padding:16px; }
+      .tagline{ font-size:.98rem; }
+    }
+
+    /* Form-Grundlayout (falls nicht schon in assets/styles.css) */
+    fieldset { border:1px solid #e6e6e6; border-radius:12px; padding:16px; margin:18px 0; }
+    legend { padding:0 6px; font-weight:700; color:#0b4d25; }
+    label { display:block; font-weight:600; margin:12px 0 6px; }
+    input[type="text"], input[type="email"], select, textarea {
+      width:100%; box-sizing:border-box; padding:10px 12px;
+      border:1px solid #cfcfcf; border-radius:8px; font:inherit; background:#fff;
+    }
+    .notice, .hint { font-size:.92rem; color:var(--muted); }
+
+    /* GRID-Helfer */
+    .grid { display:grid; grid-template-columns: 1fr 1fr; gap:16px; }
+    @media (max-width:720px){ .grid{ grid-template-columns:1fr; } }
+
+    /* Shipbox – 2 Spalten, mobil 1 Spalte */
+    .shipbox{
+      display:grid; grid-template-columns: 1fr 1fr; gap:14px; align-items:start;
+      background:#f9fafb; border:1px dashed #cbd5e1; border-radius:12px; padding:12px;
+    }
+    @media (max-width:720px){ .shipbox{ grid-template-columns:1fr; } }
+
+    /* Checkbox + Text inline, gute Klickfläche */
+    .shipbox .opt{
+      display:flex; align-items:center; gap:10px;
+      cursor:pointer; user-select:none; margin:0;
+    }
+    .shipbox .opt input[type="checkbox"]{
+      flex:0 0 auto; width:1.2em; height:1.2em; margin:0;
+      accent-color: var(--brand);
+    }
+    .shipbox .opt span{ flex:1 1 auto; }
+
+    /* Brief-Feld groß & gut lesbar */
+    #message{
+      min-height: 520px;
+      font-size: 1rem;
+      line-height: 1.6;
+      padding: 14px 16px;
+      resize: vertical;
+      box-shadow: inset 0 1px 2px rgba(0,0,0,.05);
+    }
+    @media (max-width:720px){ #message{ min-height: 380px; } }
 
     /* Zusatz-Empfänger */
     .extra-recipients { margin-top:12px; padding:12px; border:1px solid #e5e7eb; border-radius:12px; background:#f9fafb; }
@@ -55,21 +96,25 @@
     .extra-controls label span { display:block; font-weight:600; margin:0 0 4px; }
     .chip { display:inline-block; padding:3px 8px; border-radius:999px; background:#eef6f1; border:1px solid #cfe7d8; margin:4px 6px 0 0; font-size:.9rem; user-select:none; cursor:pointer; }
     .chip[data-active="1"] { background:#d1fae5; border-color:#9ee3c4; }
+
+    .actions { margin-top:16px; display:flex; gap:12px; align-items:center; }
+    button[type="submit"]{ padding:12px 18px; border:0; border-radius:10px; background:#0a7d32; color:#fff; font-weight:800; cursor:pointer; }
+    .success { display:none; margin-top:10px; padding:10px 12px; border:1px solid #bfe3bf; background:#eefeef; border-radius:8px; color:#145214; }
   </style>
 </head>
 <body>
   <div class="page">
     <header class="site-header middle">
-  <div class="hero">
-    <div class="hero-panel" role="banner" aria-label="Kampagnen-Intro">
-      <a class="logo" href="https://www.aktionsolarstrom.de/" aria-label="Zur Startseite">
-        <img src="assets/logo.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
-      </a>
-      <p class="tagline">Sie schreiben den Brief – wir übernehmen den weiteren Ablauf: Ausdruck und Zustellung an die Abgeordneten des deutschen Bundestages.</p>
-      <a class="cta" href="#brief">Brief einreichen</a>
-    </div>
-  </div>
-</header>
+      <div class="hero">
+        <div class="hero-panel" role="banner" aria-label="Kampagnen-Intro">
+          <a class="logo" href="https://www.aktionsolarstrom.de/" aria-label="Zur Startseite">
+            <img src="assets/logo.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
+          </a>
+          <p class="tagline">Sie schreiben den Brief – wir übernehmen den weiteren Ablauf: Ausdruck und Zustellung an die Abgeordneten des deutschen Bundestages.</p>
+          <a class="cta" href="#brief">Brief einreichen</a>
+        </div>
+      </div>
+    </header>
 
     <main class="middle">
       <section class="explainer">
@@ -112,7 +157,7 @@
                 <span>Partei</span>
                 <select id="filter-partei"><option value="">– Partei wählen –</option></select>
               </label>
-              <label style="display:flex; align-items:center; gap:6px; margin-left:auto;">
+              <label class="opt" style="margin-left:auto;">
                 <input type="checkbox" id="add-faction-leads">
                 <span>Zusätzlich: Fraktionsvorsitzende/r</span>
               </label>
@@ -288,7 +333,7 @@ Mit freundlichen Grüßen
                  .replace('{Anrede}',              newSal);
       } else {
         const prevAddr = elMSG.dataset.recipientAddr || '';
-        const prevSal  = elMSG.dataset.salutation    || '';
+               const prevSal  = elMSG.dataset.salutation    || '';
         if (prevAddr && txt.includes(prevAddr)) txt = txt.replace(prevAddr, newAddr);
         if (prevSal  && txt.includes(prevSal))  txt = txt.replace(prevSal,  newSal);
       }
