--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     .stats-label { font-size:.9rem; opacity:.95; letter-spacing:.2px; }
     .stats-value { font-weight:800; font-size:2.1rem; line-height:1; margin-top:2px; }
     .count { font-variant-numeric: tabular-nums; }
-    .stats-meta { margin-top:6px; font-size:.82rem; opacity:.9; }
-    .stats-meta .dot { display:inline-block; width:6px; height:6px; border-radius:50%; background:#fff; opacity:.7; margin:0 8px 1px; vertical-align:middle; }
+    .stats-meta { margin-top:6px; font-size:.82rem; opacity:.9; display:flex; align-items:center; gap:8px; }
+    .stats-meta .dot { width:6px; height:6px; border-radius:50%; background:#fff; opacity:.7; }
 
     @media (max-width:520px){ .stats-banner{ padding:12px 14px } .stats-value{ font-size:1.7rem } }
 
@@ -68,32 +68,13 @@
     /* Footer */
     footer .legal { text-align:center; display:block; }
     
-    /* --- Responsive Anpassung für das Header-Bild (Mobile View) --- */
-@media (max-width: 600px) {
-  .hero {
-    flex-direction: column;
-    padding: 16px 0;
-  }
-
-  .hero img {
-    max-width: 90%;
-    height: auto;
-    max-height: 140px;     /* <<< Bildhöhe begrenzen */
-    object-fit: contain;   /* sorgt für vollständige Darstellung */
-    margin: 0 auto;        /* zentriert das Bild horizontal */
-    display: block;
-  }
-
-  .hero h1 {
-    font-size: 1.4rem;     /* etwas kleinerer Titel */
-    line-height: 1.3;
-  }
-
-  .tagline {
-    font-size: 0.95rem;
-  }
-}
-
+    /* Mobile-Header-Bild */
+    @media (max-width: 600px) {
+      .hero { flex-direction: column; padding: 16px 0; }
+      .hero img { max-width: 90%; height: auto; max-height: 140px; object-fit: contain; margin: 0 auto; display:block; }
+      .hero h1 { font-size: 1.4rem; line-height: 1.3; }
+      .tagline { font-size: 0.95rem; }
+    }
   </style>
 </head>
 <body>
@@ -120,7 +101,7 @@
           <div class="stats-value"><span id="pdfCount" class="count">–</span></div>
           <div class="stats-meta" id="statsMeta" hidden>
             <span class="dot" aria-hidden="true"></span>
-            <span id="statsTime">Stand: –</span>
+            <span id="statsTime" class="stats-time">Stand: –</span>
           </div>
         </div>
       </div>
@@ -245,7 +226,7 @@
         return;
       }
       const start = performance.now();
-      const from = 0;
+      const from = Number(el.textContent.replace(/\./g,'')) || 0;
       function frame(now) {
         const t = Math.min(1, (now - start) / duration);
         const eased = 1 - Math.pow(1 - t, 3);
@@ -256,13 +237,28 @@
       requestAnimationFrame(frame);
     }
 
-    function formatStandText(isoString) {
-      if (!isoString) return null;
-      const d = new Date(isoString);
+    function formatStand(isoOrDate) {
+      const d = isoOrDate instanceof Date ? isoOrDate : new Date(isoOrDate);
       if (isNaN(d)) return null;
       const fmtDate = new Intl.DateTimeFormat('de-DE', { day:'2-digit', month:'2-digit' }).format(d);
       const fmtTime = new Intl.DateTimeFormat('de-DE', { hour:'2-digit', minute:'2-digit' }).format(d);
       return `Stand: ${fmtDate}, ${fmtTime} Uhr`;
+    }
+
+    function setStand(metaWrap, metaText, isoString) {
+      const txt = formatStand(isoString || new Date());
+      if (txt && metaWrap && metaText) {
+        metaText.textContent = txt;
+        metaWrap.hidden = false;
+      } else if (metaWrap) {
+        metaWrap.hidden = true;
+      }
+    }
+
+    async function fetchStats() {
+      const res = await fetch(STATS_URL + `?nocache=${Date.now()}`, { cache: 'no-store' });
+      if (!res.ok) throw new Error('HTTP ' + res.status);
+      return res.json();
     }
 
     async function loadCounter() {
@@ -272,52 +268,25 @@
       if (!el) return;
 
       try {
-        const res = await fetch(STATS_URL + `?nocache=${Date.now()}`, { cache: 'no-store' });
-        if (!res.ok) throw new Error('HTTP ' + res.status);
-        const data = await res.json();
-        console.debug('stats.json ->', data);
+        const data = await fetchStats();
 
         // Zahl (neuer Key pdfs_generated, Fallbacks bleiben)
         const raw = Number(data.pdfs_generated ?? data.count ?? data.sent_emails ?? 0);
         const value = Number.isFinite(raw) && raw >= 0 ? raw : 0;
-        countUp(el, value);
+        countUp(el, value, 900);
 
-        // Zeitstempel anzeigen (neuer/alte Keys)
-        const stand = formatStandText(data.last_update || data.stats_updated_at || data.sent_emails_last_update);
-        if (stand && metaWrap && metaText) {
-          metaText.textContent = stand;
-          metaWrap.hidden = false;
-        } else if (metaWrap) {
-          metaWrap.hidden = true;
-        }
+        // Zeitstempel: API-Feld oder lokale Uhr als Fallback
+        const stamp = data.last_update || data.stats_updated_at || data.sent_emails_last_update || null;
+        setStand(metaWrap, metaText, stamp);
       } catch (e) {
         console.warn('Zähler konnte nicht geladen werden:', e);
-        el.textContent = '–';
-        if (metaWrap) metaWrap.hidden = true;
+        setStand(metaWrap, metaText, new Date()); // Fallback: lokale Zeit zeigen
       }
     }
 
+    // Initial laden & anschließend alle 60s aktualisieren
     loadCounter();
+    setInterval(loadCounter, 60000);
   </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
